--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
             </tr>
         </table>
         <div class="border"></div>
-        <h2 id="comment">Şərh yazın</h2>
+        
         <div class="flex">
             <div id="left"> <img id="imgBook" src="./assets/book.png" alt="book"></div>
             <div id="form">
                 <form>
+                    <h2 id="comment">Şərh yazın</h2>
                     <label for="name"id="name">Tam adınız:</label><br>
-                    <input type="text"  name="name">
+                    <input type="text" id="name1" name="name">
                     <p id="read">Bu kitabı oxumusunuzmu?</p>
                     <label for="time">Nə vaxt oxumusunuz?</label>
                     <input type="text" id="time" name="time"><br><br>
